Change name in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Rancid Tomatillo",
-  "name": "Rancid Tomatillo",
+  "name": "Rancid Tomatillo: A simple, yet bold, site to view movies and their ratings",
   "icons": [
     {
       "src": "tomatillo.png",
